@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ Add notes field to honkers to document their downfall.
+
 + Add notes field to filters for record keeping.
 
 + Negated search -terms.
